5.3.0/proxy.md
|key|value|
|---|---|
|DEFAULT_CLUSTER_NAME|DefaultCluster|
|DEFAULT_CONFIG_FILE_NAME|rmq-proxy.json|
|PROCESSOR_NUMBER|4|
|aclCacheExpiredSeconds|300|
|aclCacheMaxNum|20000|
|aclCacheRefreshSeconds|20|
|brokerConfigPath|${ROCKETMQ_HOME}/conf/broker.conf|
|channelExpiredInSeconds|60|
|channelExpiredTimeout|120000|
|consumerProcessorThreadPoolNums|4|
|consumerProcessorThreadPoolQueueCapacity|10000|
|contextExpiredInSeconds|30|
|defaultInvisibleTimeMills|60000|
|delayLevelTable|{}|
|detectInterval|2000|
|detectTimeout|200|
|enableACL|false|
|enableAclRpcHookForClusterMode|false|
|enableBatchAck|false|
|enableGrpcEpoll|false|
|enablePrintJstack|true|
|enableProxyAutoRenew|true|
|enableRemotingLocalProxyGrpc|true|
|enableTopicMessageTypeCheck|true|
|grpcBossLoopNum|1|
|grpcClientConsumerLongPollingBatchSize|32|
|grpcClientConsumerMaxLongPollingTimeoutMillis|20000|
|grpcClientConsumerMinLongPollingTimeoutMillis|5000|
|grpcClientIdleTimeMills|120000|
|grpcClientManagerThreadPoolNums|4|
|grpcClientManagerThreadQueueCapacity|10000|
|grpcClientProducerBackoffInitialMillis|10|
|grpcClientProducerBackoffMaxMillis|1000|
|grpcClientProducerBackoffMultiplier|2|
|grpcClientProducerMaxAttempts|3|
|grpcConsumerThreadPoolNums|4|
|grpcConsumerThreadQueueCapacity|10000|
|grpcMaxInboundMessageSize|136314880|
|grpcProducerThreadPoolNums|4|
|grpcProducerThreadQueueCapacity|10000|
|grpcProxyRelayRequestTimeoutInSeconds|5|
|grpcRouteThreadPoolNums|4|
|grpcRouteThreadQueueCapacity|10000|
|grpcServerPort|8081|
|grpcShutdownTimeSeconds|30|
|grpcThreadPoolNums|24|
|grpcThreadPoolQueueCapacity|100000|
|grpcTransactionThreadPoolNums|4|
|grpcTransactionThreadQueueCapacity|10000|
|grpcWorkerLoopNum|8|
|heartbeatSyncerThreadPoolNums|4|
|heartbeatSyncerThreadPoolQueueCapacity|100|
|heartbeatSyncerTopicClusterName||
|heartbeatSyncerTopicName|DefaultHeartBeatSyncerTopic|
|invisibleTimeMillisWhenClear|1000|
|localHostName||
|localProxyConnectTimeoutMs|3000|
|localServeAddr||
|lockTimeoutMsInHandleGroup|3000|
|log||
|longPollingReserveTimeInMillis|100|
|maxDelayTimeMills|86400000|
|maxInvisibleTimeMills|43200000|
|maxMessageGroupSize|64|
|maxMessageSize|4194304|
|maxRenewRetryTimes|3|
|maxTransactionRecoverySecond|3600|
|maxUserPropertySize|16384|
|messageDelayLevel|1s 5s 10s 30s 1m 2m 3m 4m 5m 6m 7m 8m 9m 10m 20m 30m 1h 2h|
|metadataThreadPoolNums|3|
|metadataThreadPoolQueueCapacity|100000|
|metricCollectorAddress||
|metricCollectorMode|off|
|metricGrpcExporterIntervalInMills|60000|
|metricGrpcExporterTimeOutInMills|3000|
|metricLoggingExporterIntervalInMills|10000|
|metricsExporterType|DISABLE|
|metricsGrpcExporterHeader||
|metricsGrpcExporterTarget||
|metricsInDelta|false|
|metricsLabel||
|metricsPromExporterHost||
|metricsPromExporterPort|5557|
|minInvisibleTimeMillsForRecv|10000|
|namesrvAddr||
|namesrvDomain||
|namesrvDomainSubgroup||
|printJstackInMillis|60000|
|printThreadPoolStatusInMillis|3000|
|producerProcessorThreadPoolNums|4|
|producerProcessorThreadPoolQueueCapacity|10000|
|proxyClusterName|DefaultCluster|
|proxyMode|CLUSTER|
|proxyName||
|regionId||
|remotingAccessAddr||
|remotingDefaultThreadPoolNums|16|
|remotingDefaultThreadPoolQueueCapacity|50000|
|remotingHeartbeatThreadPoolNums|8|
|remotingHeartbeatThreadPoolQueueCapacity|50000|
|remotingListenPort|8080|
|remotingPullMessageThreadPoolNums|16|
|remotingPullThreadPoolQueueCapacity|50000|
|remotingSendMessageThreadPoolNums|16|
|remotingSendThreadPoolQueueCapacity|10000|
|remotingTopicRouteThreadPoolNums|8|
|remotingTopicRouteThreadPoolQueueCapacity|50000|
|remotingUpdateOffsetThreadPoolNums|16|
|remotingUpdateOffsetThreadPoolQueueCapacity|10000|
|remotingWaitTimeMillsInDefaultQueue|3000|
|remotingWaitTimeMillsInHeartbeatQueue|31000|
|remotingWaitTimeMillsInPullQueue|5000|
|remotingWaitTimeMillsInSendQueue|3000|
|remotingWaitTimeMillsInTopicRouteQueue|3000|
|remotingWaitTimeMillsInUpdateOffsetQueue|3000|
|renewAheadTimeMillis|10000|
|renewMaxThreadPoolNums|4|
|renewMaxTimeMillis|10800000|
|renewSchedulePeriodMillis|5000|
|renewThreadPoolNums|2|
|renewThreadPoolQueueCapacity|300|
|rocketMQClusterName|DefaultCluster|
|rocketmqMQClientNum|6|
|sendLatencyEnable|false|
|startDetectorEnable|false|
|subscriptionGroupConfigCacheExpiredSeconds|300|
|subscriptionGroupConfigCacheMaxNum|20000|
|subscriptionGroupConfigCacheRefreshSeconds|20|
|tlsCertPath|${ROCKETMQ_HOME}/conf/tls/rocketmq.crt|
|tlsKeyPath|${ROCKETMQ_HOME}/conf/tls/rocketmq.key|
|tlsTestModeEnable|true|
|topicConfigCacheExpiredSeconds|300|
|topicConfigCacheMaxNum|20000|
|topicConfigCacheRefreshSeconds|20|
|topicRouteServiceCacheExpiredSeconds|300|
|topicRouteServiceCacheMaxNum|20000|
|topicRouteServiceCacheRefreshSeconds|20|
|topicRouteServiceThreadPoolNums|4|
|topicRouteServiceThreadPoolQueueCapacity|5000|
|traceOn|false|
|transactionDataExpireMillis|30000|
|transactionDataExpireScanPeriodMillis|10000|
|transactionDataMaxNum|15|
|transactionDataMaxWaitClearMillis|30000|
|transactionHeartbeatBatchNum|100|
|transactionHeartbeatPeriodSecond|20|
|transactionHeartbeatThreadPoolNums|20|
|transactionHeartbeatThreadPoolQueueCapacity|200|
|useDelayLevel|false|
|useEndpointPortFromRequest|false|
|userCacheExpiredSeconds|300|
|userCacheMaxNum|20000|
|userCacheRefreshSeconds|20|
|userPropertyMaxNum|128|
